# matplotly

./: .gitignore  CHANGELOG.md  README.md  demo.ipynb  demo_bar.ipynb  demo_box.ipynb  demo_errorbar.ipynb  demo_hist.ipynb  demo_plot.ipynb  demo_scatter.ipynb  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
docs/: ai.rst  api.rst  code_export.rst  conf.py  editor.rst  index.rst  installation.rst  plot_types.rst  profiles.rst  quickstart.rst  requirements.txt
docs/examples/: index.rst
examples/: demo_bar.ipynb  demo_box.ipynb  demo_heatmap.ipynb  demo_hist.ipynb  demo_plot.ipynb  demo_scatter.ipynb  matplotly_demo.ipynb
matplotly/: __init__.py  _ai_extract.py  _api.py  _code_gen.py  _commands.py  _introspect.py  _profiles.py  _renderer.py  _style_import.py  _types.py
matplotly/panels/: __init__.py  _bar.py  _base.py  _boxplot.py  _color_utils.py  _distribution.py  _errorbar.py  _fill.py  _global.py  _heatmap.py  _histogram.py  _line.py  _marginal.py  _scatter.py  _subplot.py  _violin.py
tests/: test_ai_extract.py  test_code_gen.py
