[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matplotly"
version = "0.1.2"
description = "Jupyter-native interactive matplotlib figure editor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Peter Koo" }]
keywords = ["matplotlib", "jupyter", "interactive", "plotting", "widgets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "ipywidgets>=8.0.0",
    "ipympl>=0.9.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "Pillow>=9.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
    "nbsphinx>=0.9",
]

[project.urls]
Homepage = "https://github.com/p-koo/matplotly"
Documentation = "https://matplotly.readthedocs.io"
"Bug Tracker" = "https://github.com/p-koo/matplotly/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
